fixed alignment

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ body {
   text-align: center;
   justify-content: center;
   align-items: center;  
-  margin-top: 1%;
+  margin-top: 5%;
   place-items: center;
   margin-left: 30%;
   margin-right: 30%;
